Click NEWS


* Added polling.

* Fixed lexer bug: compound elements with `{' are accepted everywhere.


Version 0.6   11.Dec.1999

* Added dynamic linking support. Click configuration files can now be ar(1)
  archives, possibly containing "packages"---dynamically linked object
  files that are loaded into the kernel module or the user-level program.
  This means you can make your own element classes and link them
  dynamically.

* Added `click-fastclassifier' and `click-install' tools.

* Added `--help', `--version', etc. options to tools.

* Added man pages for `click', `click-align', and `click-install'.

* More options for user-level Click, including support for hander
  invocations on the command line.

* Added `udpgen' and `udpcount' in the `tools' directory.

* Fixed dynamic reconfiguration bug: no more doubled characters.

* Fixed compound element bug: input and output ports bigger than 0 were
  ignored.


Version 0.51   12.Nov.1999

* Support for required-alignment machines via `click-align' tool. Added
  click-align tool, Align and AlignmentInfo elements.

* More documentation.


Version 0.5   20.Oct.1999

* First public release.